--- a/_data/app.yml
+++ b/_data/app.yml
@@ -1,6 +1,6 @@
-name: Mobile App Name
-description: A super tagline for the mobile app
-full_description: 'A more complete description of the mobile app<br>
+name: Synergy Construction, LLC
+description: The interaction or cooperation of two or more organizations, substances, or other agents to produce a combined effect greater than the sum of their separate effects.
+full_description: 'Building with Confidence.<br>
 <br>With a lot of features:
 <br>- Feature 1
 <br>- Feature 2
